--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,7 @@
 
 :root{
 	--maroon: #8c0001;
+    --light-maroon: #801818;
 }	
 
 .bg-maroon{
@@ -21,6 +22,10 @@
 
 
 .text-maroon{
+    color: var(--maroon);
+}
+
+.text-maroon:hover{
     color: var(--maroon);
 }
 
@@ -70,6 +75,19 @@
     margin-right: 1rem;
   }
 
+
+/* nav links */
+.nav-item .nav-link.active{
+    color: var(--maroon);
+    font-weight: bold;
+}
+.nav-item .nav-link{
+    color: black;
+}
+.nav-item .nav-link:hover{
+    color: var(--maroon);
+}
+
 /* Positioning */
 
 .top-15{
@@ -78,4 +96,11 @@
 
 .start-46{
     left: 46.5%!important;
+}
+
+
+/* Highlight selection */
+::selection{
+    background-color: var(--light-maroon);
+    color: white;
 }
